--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "mongodb": "^4.8.1",
+    "@next-auth/mongodb-adapter": "^1.1.1",
+    "@sentry/nextjs": "^7.37.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "cookies-next": "^2.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
     "next": "latest",
+    "next-auth": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
